# ml-design-doc-reviewer

./: .env.example  .env.prepare-data.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/: settings.json
.github/workflows/: ci.yml
data/: README.md  error_topology.csv  sample_manifest.csv
data/evidently_ai_cases/: 800 ML and LLM use cases.csv
data/flawed_disdocs/: case_000_disdoc.md  case_001_disdoc.md  case_002_disdoc.md  case_003_disdoc.md  case_006_disdoc.md  case_007_disdoc.md  case_009_disdoc.md  case_011_disdoc.md  case_014_disdoc.md  case_015_disdoc.md  case_016_disdoc.md  case_017_disdoc.md  case_018_disdoc.md  case_019_disdoc.md  case_021_disdoc.md  case_088_disdoc.md  injection_log.csv
data/normalized_disdocs/: case_000_disdoc.md  case_001_disdoc.md  case_002_disdoc.md  case_003_disdoc.md  case_006_disdoc.md  case_007_disdoc.md  case_009_disdoc.md  case_011_disdoc.md  case_014_disdoc.md  case_015_disdoc.md  case_016_disdoc.md  case_017_disdoc.md  case_018_disdoc.md  case_019_disdoc.md  case_021_disdoc.md  case_022_ERROR.json  case_027_ERROR.json  case_028_ERROR.json  case_032_ERROR.json  case_033_ERROR.json  case_034_ERROR.json  case_035_ERROR.json  case_036_ERROR.json  case_037_ERROR.json  case_038_ERROR.json  case_088_disdoc.md  normalize_summary.json
data/raw_documents/: case_000_hermes_a_text_to_sql_solution_at_swiggy.md  case_000_hermes_a_text_to_sql_solution_at_swiggy.meta.json  case_001_large_language_models_for_automatic_cloud_incident_management.md  case_001_large_language_models_for_automatic_cloud_incident_management.meta.json  case_002_optimizing_payments_with_machine_learning.md  case_002_optimizing_payments_with_machine_learning.meta.json  case_003_asknu_a_rag_solution_to_increase_employees_productivity_at_nubank.md  case_003_asknu_a_rag_solution_to_increase_employees_productivity_at_nubank.meta.json  case_004_ERROR.json  case_005_ERROR.json  case_006_how_we_built_enterprise_search_to_be_secure_and_private.md  case_006_how_we_built_enterprise_search_to_be_secure_and_private.meta.json  case_007_language_identification_from_very_short_strings.md  case_007_language_identification_from_very_short_strings.meta.json  case_008_ERROR.json  case_009_how_genai_codegen_tools_are_helping_us_deliver_convenience_quicker.md  case_009_how_genai_codegen_tools_are_helping_us_deliver_convenience_quicker.meta.json  case_010_ERROR.json  case_011_experimenting_with_handwriting_recognition_for_the_new_york_times_crossword.md  case_012_ERROR.json  (+136 more)
docs/: image_understanding_options.md
prompts/: normalize_to_disdoc.md
tests/: fakes.py  test_assessment_validation.py  test_assessor.py  test_assessor_checklist.py  test_assessor_service.py  test_checklist.py  test_cli.py  test_config.py  test_critic_score.py  test_critic_validation.py  test_domain.py  test_id_validation.py  test_json_response.py  test_jsonl.py  test_kappa.py  test_llm_client.py  test_logging.py  test_metrics_offline.py  test_metrics_records.py  test_metrics_report.py  test_packaging.py  test_pipeline.py  test_prepare_data_quality.py  test_prompts.py  test_ranker.py  test_reviewer.py  test_service.py  test_wcs.py
(+61 files in other folders)
