[project]
name = "ml-design-doc-reviewer"
version = "0.1.0"
description = "AI reviewer and linter for ML system design documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2024.0.0",
    "faster-whisper>=1.1.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "trafilatura>=2.0.0",
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2025.1.0",
]

[project.scripts]
prepare-data = "prepare_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prepare_data"]

[tool.hatch.build.targets.wheel.sources]
"src/prepare_data" = "prepare_data"

[dependency-groups]
dev = []
